--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -14,7 +14,7 @@
 <body>
 <a href="/about">ABOUT</a>
 <a href="/users">Users</a>
-<a href="/todo">Todo</a>
+<a href="/todo">To-Do</a>
 <hr>
 <button class="blockCenter" style="margin-top: 10px" type="button" onclick="sendAlert()">Send an alert!</button>
 </body>
