For Peace of Mind: Add a line on top of page on todo.js Change "/api/todos" to "/api/todo" Change "Get All Todos" to "Get all To-Do" in button on html

--- a/src/main/resources/public/todo.html
+++ b/src/main/resources/public/todo.html
@@ -7,7 +7,7 @@
   <script type="text/javascript" src="javascript/todo.js"></script>
 </head>
 <body>
-<button type="button" id="getAllTodo">Get All Todos</button>
+<button type="button" id="getAllTodo">Get All To-Do</button>
 
 <hr/>
 
