--- a/src/main/resources/public/users.html
+++ b/src/main/resources/public/users.html
@@ -7,11 +7,11 @@
   <script type="text/javascript" src="javascript/users.js"></script>
 </head>
 <body>
-<button type="button" id="getAll">Get All Users</button>
+<button type="button" id="getAllUsers">Get All Users</button>
 
 <hr/>
 
-<div id="jsonDump" style="margin-top:20px"> Json will go here</div>
+<div id="jsonDumpUsers" style="margin-top:20px"> Json will go here</div>
 
 <label for="age">age:</label><input id="age" type="text" name="age">
 <button type="button" id="getUsersByAge"> get users by age</button>
@@ -20,7 +20,7 @@
   window.onload = function () {
     console.log("The page is loaded now!");
 
-    var element = document.getElementById('getAll');
+    var element = document.getElementById('getAllUsers');
     element.addEventListener("click", getAllUsers, true);
 
     element = document.getElementById('getUsersByAge');
