Start of prettying up

--- a/src/main/resources/public/todo.html
+++ b/src/main/resources/public/todo.html
@@ -11,7 +11,7 @@
 
 <hr/>
 
-<div id="jsonDumpTodos" style="margin-top:20px"> Json will go here</div>
+<pre id="jsonDumpTodos" style="margin-top:20px"> Json will go here</pre>
 
 <label for="limit">Limit:</label><input id="limit" type="text" name="limit">
 <button type="button" id="getTodosByLimit"> Limit Todos</button>
