--- a/src/main/resources/public/todo.html
+++ b/src/main/resources/public/todo.html
@@ -11,18 +11,26 @@
 
 <hr/>
 
-<div id="jsonDumpTodos" style="margin-top:20px"> Json will go here</div>
-
-<label for="limit">Limit:</label><input id="limit" type="text" name="limit">
-<button type="button" id="getTodosByLimit"> Limit todos</button>
 
 <form action="">
   <input type="radio" id="complete" name="status" value="complete"> Complete<br>
   <input type="radio" id="incomplete" name="status" value="incomplete"> Incomplete<br>
 </form>
 
-<label for="wordSearch">Word:</label><input id="wordSearch" type="text" name="wordSearch">
-<button type="button" id="getTodoByBody"> Search</button>
+<label for="limit">Limit:</label><input id="limit" type="text" name="limit">
+<button type="button" id="getTodosByLimit"> Limit todos</button>
+
+
+<div><label for="wordSearch">Search Body:</label><input id="wordSearch" type="text" name="wordSearch">
+<button type="button" id="getTodoByBody"> Search</button></div>
+
+<div><label for="owner">Search Owner:</label><input id="owner" type="text" name="owner">
+<button type="button" id="getTodosByOwner"> Search</button></div>
+
+<div><label for="category">Search Category:</label><input id="category" type="text" name="category">
+<button type="button" id="getTodosByCategory"> Search</button></div>
+
+<div id="jsonDumpTodos" style="margin-top:20px"> Json will go here</div>
 
 <script>
   window.onload = function () {
@@ -42,6 +50,13 @@
 
     element = document.getElementById('getTodoByBody');
     element.addEventListener("click",getLimit, true);
+
+    element = document.getElementById('getTodoByOwner');
+    element.addEventListener("click",getLimit, true);
+
+    element = document.getElementById('getTodoByCategory');
+    element.addEventListener("click",getLimit, true);
+
 
     //var element = document.getElementById('both');
     //element.addEventListener("click", getLimit, true);
