Add SortBy to HTML
Added text box and Title

--- a/src/main/resources/public/todo.html
+++ b/src/main/resources/public/todo.html
@@ -32,6 +32,8 @@
 <div><label for="category">Search Category:</label><input id="category" type="text" name="category">
 </div>
 
+<div><label for="sortBy">Sort By:</label><input id="sortBy" type="text" name="sortBy"></div>
+
 <div><button type="button" id="getTodosByLimit"> Search</button></div>
 
 <div id="jsonDumpTodos" style="margin-top:20px"> Json will go here</div>
